<resources>
    <string name="app_name">Memories Bottle</string>
    <string name="Login">Log In</string>
    <string name="signup">Don\'t have an Account? <b>Sign Up</b></string>
    <string name="label1">Don\'t wait</string>
    <string name="logo_name">Spotify</string>
    <string name="label2">Log in or create a new account now</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="social">Or Log In using</string>
    <string name="facebook">Facebook</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Image Compressor</string>
    <string name="wait">Waiting</string>
    <string name="loading">Loading...</string>


    <string name="facebook_app_id">563336964340680</string>
    <string name="fb_login_protocol_scheme">fb563336964340680</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="new_group">New group</string>
    <string name="messages">Messages</string>
    <string name="name_group">Group name</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="rank">rank</string>
    <string name="user_namee">user name</string>
    <string name="username">shrouq said</string>
    <string name="android_room">Android Room</string>
    <string name="follow">Follow</string>
    <string name="upload">Uploading...</string>
    <string name="post">Posting...</string>
    <string name="Creat">Creating...</string>


</resources>
